# AI-Agent-Communication

./: README.md
a2a/include/a2a/examples/: agent_registry.hpp  qwen_client.hpp
a2a/include/a2a/models/: a2a_response.hpp  agent_card.hpp  agent_message.hpp  agent_task.hpp  artifact.hpp  message_part.hpp  message_send_params.hpp  task_status.hpp
a2a/src/models/: agent_card.cpp  agent_message.cpp  agent_task.cpp  artifact.cpp  message_part.cpp  message_send_params.cpp  task_status.cpp
common/: CMakeLists.txt
common/include/agent_rpc/common/: circuit_breaker.h  load_balancer.h  metrics.h
common/src/: metrics.cpp
include/agent_rpc/: circuit_breaker.h  load_balancer.h  logger.h  metrics.h  rpc_client.h  rpc_framework.h  rpc_server.h  service_registry.h
mcp/: CMakeLists.txt
mcp_server_integrated/: CMakeLists.txt
mcp_server_integrated/src/: main.cpp
orchestrator/: CMakeLists.txt
proto/: CMakeLists.txt  common.proto
src/: CMakeLists.txt  circuit_breaker.cpp  load_balancer.cpp  logger.cpp  metrics.cpp  rpc_client.cpp  rpc_server.cpp  service_registry.cpp
